# libqrencode

./: CMakeLists.txt  build-linux.sh  build-win-x64-debug.bat  build-win-x64-release.bat  build-win-x86-debug.bat  build-win-x86-release.bat
3rd/libpng/lib/Release/: libpng16_static.lib
3rd/libpng/lib/x64/Debug/: libpng16_static.lib
3rd/libpng/lib/x64/Release/: libpng16_static.lib
3rd/libpng/lib/x86/Debug/: libpng16_static.lib
3rd/zlib/lib/Debug/: zlibstatic.lib
3rd/zlib/lib/Release/: zlibstatic.lib
3rd/zlib/lib/x64/Debug/: zlibstatic.lib
3rd/zlib/lib/x64/Release/: zlibstatic.lib
include/: qrencode.h
src/: CMakeLists.txt  QRCodeGenerator.cpp  QRCodeGenerator.h  platform_compatibility.cpp  platform_compatibility.h  qrencode.cpp  qrencode.h
test/: CMakeLists.txt  main.cpp
