PROJECT(qrencode)
########################## Basic ##########################

FILE(GLOB_RECURSE PUBLIC_INCLUDE_FILES
    ${CMAKE_SOURCE_DIR}/include/*.h
)

FILE(GLOB_RECURSE INCLUDE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${PUBLIC_INCLUDE_FILES}
)

FILE(GLOB_RECURSE SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

SET(ALL_FILES
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
)

SOURCE_GROUP("Header Files" FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files" FILES "${SOURCE_FILES}")

ADD_LIBRARY(
    ${PROJECT_NAME}
    STATIC
    ${ALL_FILES}
)
###########################################################

IF(UNIX)
    SET(EX_LINK_LIBRARIES
        png
        z
    )
ELSE(UNIX)
    SET(EX_LINK_LIBRARIES 
        libpng16_static
        zlibstatic
    )
ENDIF(UNIX)
# Link external libraries.
TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${EX_LINK_LIBRARIES}
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

IF(MSVC)
    INSTALL(
        FILES 
        ${ZLIB_ROOT_DIR}/lib/${LIB_DIR_SUFFIX}/${CMAKE_BUILD_TYPE}/zlibstatic.lib
        ${LIBPNG_ROOT_DIR}/lib/${LIB_DIR_SUFFIX}/${CMAKE_BUILD_TYPE}/libpng16_static.lib
        DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
ENDIF()

INSTALL(
    FILES ${PUBLIC_INCLUDE_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)